--- a/index.html
+++ b/index.html
@@ -2,16 +2,18 @@
 <html lang="vi">
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>Profile — Neon Bio</title>
-  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>My Profile</title>
+
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@500;600;700&display=swap" rel="stylesheet">
+
   <style>
     :root {
       --bg: #0b0f1a;
       --card: rgba(255,255,255,0.05);
       --neon1: #7b61ff;
       --neon2: #00f0ff;
-      --text: #f0f4ff;
+      --text: #f2f6ff;
       --muted: rgba(255,255,255,0.6);
       --radius: 20px;
       font-family: "Poppins", sans-serif;
@@ -20,65 +22,77 @@
     * { box-sizing: border-box; margin: 0; padding: 0; }
 
     body {
-      background: radial-gradient(circle at 20% 30%, rgba(123,97,255,0.08), transparent 60%), 
-                  radial-gradient(circle at 80% 70%, rgba(0,240,255,0.08), transparent 60%), 
+      background: radial-gradient(circle at 25% 25%, rgba(123,97,255,0.08), transparent 60%), 
+                  radial-gradient(circle at 80% 80%, rgba(0,240,255,0.08), transparent 60%), 
                   var(--bg);
-      color: var(--text);
       min-height: 100vh;
       display: flex;
       align-items: center;
       justify-content: center;
-      padding: 30px;
+      padding: 40px 20px;
+      color: var(--text);
     }
 
     .card {
       background: var(--card);
-      border: 1px solid rgba(255,255,255,0.08);
       border-radius: var(--radius);
       padding: 40px 30px;
-      text-align: center;
       max-width: 400px;
       width: 100%;
+      text-align: center;
       backdrop-filter: blur(10px);
-      box-shadow: 0 0 30px rgba(0,0,0,0.4);
+      border: 1px solid rgba(255,255,255,0.08);
+      box-shadow: 0 0 25px rgba(0,0,0,0.5);
     }
 
     .avatar {
       width: 120px;
       height: 120px;
       border-radius: 50%;
-      margin: 0 auto 20px;
+      margin: 0 auto 18px;
       border: 3px solid transparent;
       background: linear-gradient(var(--bg), var(--bg)) padding-box,
                   linear-gradient(135deg, var(--neon1), var(--neon2)) border-box;
+      overflow: hidden;
     }
-
     .avatar img {
       width: 100%;
       height: 100%;
-      border-radius: 50%;
       object-fit: cover;
-      display: block;
     }
 
     h1 {
-      font-size: 1.6rem;
+      font-size: 1.5rem;
       font-weight: 700;
-      margin-bottom: 6px;
+      background: linear-gradient(90deg, var(--neon1), var(--neon2));
+      -webkit-background-clip: text;
+      color: transparent;
+      margin-bottom: 25px;
     }
 
-    h2 {
-      font-size: 1rem;
-      font-weight: 500;
-      color: var(--muted);
-      margin-bottom: 18px;
+    .socials {
+      display: flex;
+      justify-content: center;
+      gap: 15px;
+      margin-bottom: 25px;
     }
 
-    p {
-      font-size: 0.95rem;
-      color: var(--muted);
-      margin-bottom: 24px;
-      line-height: 1.5;
+    .socials a {
+      text-decoration: none;
+      font-size: 1.3rem;
+      color: var(--text);
+      background: rgba(255,255,255,0.05);
+      border: 1px solid rgba(255,255,255,0.1);
+      border-radius: 12px;
+      padding: 10px 16px;
+      transition: all 0.2s ease;
+    }
+
+    .socials a:hover {
+      background: linear-gradient(90deg, var(--neon1), var(--neon2));
+      color: #fff;
+      transform: translateY(-3px);
+      box-shadow: 0 0 20px rgba(0,240,255,0.4);
     }
 
     .links {
@@ -91,10 +105,10 @@
       text-decoration: none;
       color: var(--text);
       font-weight: 600;
+      background: linear-gradient(90deg, rgba(255,255,255,0.03), rgba(255,255,255,0.02));
       border: 1px solid rgba(255,255,255,0.08);
-      background: linear-gradient(90deg, rgba(255,255,255,0.04), rgba(255,255,255,0.02));
-      border-radius: 12px;
-      padding: 12px;
+      border-radius: 14px;
+      padding: 14px;
       transition: all 0.2s ease;
     }
 
@@ -110,33 +124,27 @@
       font-size: 0.8rem;
       color: var(--muted);
     }
-
-    /* Neon glow on name */
-    .neon {
-      background: linear-gradient(90deg, var(--neon1), var(--neon2));
-      -webkit-background-clip: text;
-      background-clip: text;
-      color: transparent;
-    }
   </style>
 </head>
+
 <body>
   <div class="card">
     <div class="avatar">
-      <img src="https://images.unsplash.com/photo-1607746882042-944635dfe10e?q=80&w=400" alt="Avatar cá nhân">
+      <img src="https://images.unsplash.com/photo-1603415526960-f8f6c3b4f6c6?q=80&w=400" alt="Avatar">
     </div>
-    <h1><span class="neon">Nguyễn Minh</span></h1>
-    <h2>UI/UX Designer • Freelancer</h2>
-    <p>
-      Mình là nhà thiết kế tự do yêu thích phong cách tối giản và công nghệ hiện đại.  
-      Luôn tìm cách kết hợp sáng tạo và trải nghiệm người dùng tốt nhất.
-    </p>
+    <h1>Nguyễn Minh</h1>
+
+    <div class="socials">
+      <a href="#" title="YouTube">📺</a>
+      <a href="#" title="Discord">💬</a>
+      <a href="#" title="Roblox">🎮</a>
+    </div>
 
     <div class="links">
-      <a href="#" class="link">🌐 Website</a>
-      <a href="#" class="link">💼 LinkedIn</a>
-      <a href="#" class="link">📸 Instagram</a>
-      <a href="#" class="link">✉️ Liên hệ</a>
+      <a href="#" class="link">🌐 Website chính</a>
+      <a href="#" class="link">💻 Portfolio</a>
+      <a href="#" class="link">📷 Instagram</a>
+      <a href="#" class="link">📩 Liên hệ</a>
     </div>
 
     <footer>© 2025 Nguyễn Minh</footer>
