--- a/index.html
+++ b/index.html
@@ -21,18 +21,17 @@
 
     * { box-sizing: border-box; margin: 0; padding: 0; }
 
-    body {
-      background: radial-gradient(circle at 25% 25%, rgba(123,97,255,0.1), transparent 60%),
-                  radial-gradient(circle at 80% 80%, rgba(0,240,255,0.1), transparent 60%), 
-                  var(--bg);
-      min-height: 100vh;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-      padding: 40px 20px;
-      color: var(--text);
-      overflow: hidden;
-    }
+  body {
+    background: url('https://files.catbox.moe/q7hhtp.jpeg') no-repeat center center fixed;
+    background-size: cover;
+    min-height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 40px 20px;
+    color: var(--text);
+    overflow: hidden;
+  }
 
     /* --- Card --- */
     .card {
