--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
 
     /* --- Card --- */
     .card {
-      background: rgba(255,255,255,0.05);
+      background: rgba(255,255,255,0.02);
+      border: 2px solid rgba(123,97,255,0.5);
       border-radius: var(--radius);
       padding: 40px 30px;
       max-width: 400px;
