--- a/index.html
+++ b/index.html
@@ -95,16 +95,16 @@
       object-fit: contain;
     }
 
-    h1 {
-      font-size: 1.6rem;
-      font-weight: 700;
-      background: linear-gradient(90deg, var(--neon1), var(--neon2));
-      -webkit-background-clip: text;
-      background-clip: text;
-      color: transparent;
-      margin-bottom: 20px;
-      transform: translateZ(30px);
-    }
+  h1 {
+    font-size: 1.6rem;
+    font-weight: 700;
+    background: linear-gradient(90deg, #ff69b4, #800080, #ffffff, #00ffff);
+    -webkit-background-clip: text;
+    background-clip: text;
+    color: transparent;
+    margin-bottom: 20px;
+    transform: translateZ(30px);
+  }
 
     /* --- Social Icons --- */
     .social-icons {
