--- a/index.html
+++ b/index.html
@@ -159,19 +159,15 @@
     padding: 14px;
     border-radius: 14px;
     background: linear-gradient(90deg, #ff69b4, #800080, #ffffff, #00ffff);
-    -webkit-background-clip: text;
-    background-clip: text;
-    color: transparent;
-    border: 1px solid rgba(255,255,255,0.08);
-    transition: all 0.2s ease;
+    color: #fff;
+    border: none;
+    transition: all 0.3s ease;
   }
-
-    .link:hover {
-      background: linear-gradient(90deg, var(--neon1), var(--neon2));
-      color: #fff;
-      transform: translateY(-2px);
-      box-shadow: 0 0 15px rgba(0,240,255,0.3);
-    }
+  
+  .link:hover {
+    transform: translateY(-2px);
+    box-shadow: 0 0 15px rgba(0,240,255,0.3);
+  }
 
     footer {
       margin-top: 30px;
