--- a/index.html
+++ b/index.html
@@ -165,10 +165,10 @@
   }
   
   .link:hover {
-    background: linear-gradient(90deg, #ff69b4, #800080, #ffffff, #00ffff);
+    background: #ff69b4;
     color: #fff;
     transform: translateY(-2px);
-    box-shadow: 0 0 15px rgba(0,240,255,0.3);
+    box-shadow: 0 0 15px rgba(255,105,180,0.5);
   }
 
     footer {
