--- a/index.html
+++ b/index.html
@@ -213,7 +213,8 @@
     </div>
 
     <div class="links">
-      <a href="#" class="link">🌐 Website chính</a>
+      <a href="https://duckcmnt-executors.vercel.app/" class="link">🌐 Free Executors Roblox Download</a>
+      <a href="https://shopduckrbx.store/" class="link">🛒 My Shop</a>
     </div>
 
     <footer>© 2025 DuckXKurumi</footer>
